# bridge-minter

./: .gitignore  LICENSE  README.md  bridge-minter.cabal  cabal.project
app/: Main.hs
assets/: bridge-policy-id.txt  bridge.plutus
scripts/: compile.sh  query-protocol-parameters.sh
scripts/core/: burn-1.sh  burn-2.sh  mint-1.sh  mint-2.sh  mint.sh
scripts/envars/: local-testnet.envars  mainnet-env.envars  testnet-env.envars
scripts/failure-cases/: burn-bad-count.sh  mint-bad-count.sh
scripts/happy-path/: burn-1.sh  burn-2.sh  burn.sh  mint-1.sh  mint-2.sh  mint.sh
scripts/local-testnet/: protocol-parameters.json
scripts/mainnet/: protocol-parameters.json
scripts/minting/: mint-0-policy.sh  test-mint-tx.sh
scripts/query/: all  find-utxo.sh
scripts/redeemers/: burn.json  mint.json  mint1.json
scripts/scratch/: setup-wallets.sh
scripts/test-policies/: test-policy-0.plutus
scripts/tests/: mint-burn.sh
scripts/wallets/: make-all-wallets.sh  make-pkh.sh  make-wallet-and-pkh.sh
src/Canonical/: Bridge.hs
test-policies/: test-policy-0-id.txt
