cabal-version: 2.4
name:          bridge-minter
version:       1.0.0.0
license: MIT
author:        Jonathan Fischoff
maintainer:    jonathan@Canonicalllc.com
build-type:    Simple

common lang
  build-depends:    base ^>=4.14
  default-language: Haskell2010
  default-extensions:
    DataKinds
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    RecordWildCards
    TemplateHaskell
    TypeApplications
    TypeFamilies
    BangPatterns
    CPP
    LambdaCase
    DeriveGeneric

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages
    -Werror

library
  import:          lang
  exposed-modules: Canonical.Bridge
  build-depends:
    , bytestring
    , cardano-api
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise
    , plutonomy

  hs-source-dirs:  src
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Wno-unused-packages -Werror

executable bridge-sc
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  build-depends:
    , cardano-api
    , bridge-minter
    , optparse-generic
    , plutus-ledger-api
    , plutus-tx
